# kinect-playground

./: CMakeLists.txt
src/: freenect.cpp  freenect.hpp  main.cpp  opencv.cpp  opencv.hpp  pcl.cpp  pcl.hpp
